--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -26,7 +26,8 @@ else
                     <td><a asp-controller="Customer" asp-action="Details" asp-route-id="@customer.Id">View Details</a></td>
                 </tr>
             }
-            <btn btn-addNewCustomer><a asp-asp-controller="Customer" asp-action="New">Add New Customer</a></btn>
         </tbody>
     </table>
+    <button btn-addNewCustomer><a asp-asp-controller="Customer" asp-action="New">Add New Customer</a></button>
 }
+
