--- a/Views/Customer/New.cshtml
+++ b/Views/Customer/New.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>New Customer</h2>
-
+<a href="@Url.Action("Index", "Customer")"><button class="btn btn-Back">Back to List</button></a>
 @using (Html.BeginForm("Save", "Customer", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true,"Please fix the following errors.")
@@ -29,6 +29,14 @@
         )
 
     @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Customer.IsSubscribedToNewsletter)
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) Subscribed to Newsletter
+        </label>
+    </div>
 </div>
 @Html.HiddenFor(m => m.Customer.Id)
 @Html.AntiForgeryToken()
