--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -9,5 +9,6 @@
 <p><strong>Release Date: </strong>@Model.ReleaseDate</p>
 <p><strong>Price: </strong>@Model.Price</p>
 <a href="@Url.Action("Index", "Movies")"><button class="btn btn-Back">Back to List</button></a>
+<a href=" @Url.Action("Edit", "Movies", new { id = Model.Id })"><button class="btn btn-primary">Edit</button></a>
 <a href="@Url.Action("Delete", "Movies", new { id = Model.Id })">
     <button class="btn btn-danger">Delete</button>
