--- a/Views/Customer/New.cshtml
+++ b/Views/Customer/New.cshtml
@@ -6,18 +6,13 @@
 }
 <h2>New Customer</h2>
 <a href="@Url.Action("Index", "Customer")"><button class="btn btn-Back">Back to List</button></a>
-@using (Html.BeginForm("Save", "Customer", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Save", "Customer", FormMethod.Post, new { enctype = "multipart/form-data", novalidate = "false" }))
 {
     @Html.ValidationSummary(true,"Please fix the following errors.")
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Customer.Name)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.Birthdate)
-        @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control", type = "date" })
-        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
+        @Html.ValidationMessageFor(m => m.Customer.Name, null, new{@class = "text-danger"})
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
@@ -28,8 +23,14 @@
         new { @class = "form-control", @nullable = "nullable" }
         )
 
-    @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+    @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId,null, new { @class = "text-danger" })
 </div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Customer.Birthdate)
+    @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control", type = "date" })
+    @Html.ValidationMessageFor(m => m.Customer.Birthdate,null,new{@class = "text-danger"})
+</div>
+
 <div class="form-group">
     @Html.LabelFor(m => m.Customer.IsSubscribedToNewsletter)
     <div class="checkbox">
@@ -42,6 +43,12 @@
 @Html.AntiForgeryToken()
 <button type="submit" class="btn btn-primary">Save</button>
 }
+<!-- Validation phía clients -->
 @section scripts {
-    <script src="~/bundles/jqueryval"></script>
+    <script src="~/bundles/jqueryval"></script> 
+    <script>
+        $(document).ready(function () {
+            $("form").removeAttr("novalidate");
+        });
+    </script>
 }
